Comment cavity length calculation

--- a/cavity-lengths.ipynb
+++ b/cavity-lengths.ipynb
@@ -41,6 +41,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Initial states of the cavity and the environment\n",
+    "$$\\ket{\\psi_\\textnormal{sys}} = \\ket{0}_\\textnormal{cav}\\otimes\\ket{\\alpha}_\\textnormal{env}$$\n",
+    "where both are Fock spaces. Cavity starts as a vacuum, and the environment is a monochromatic laser modelled as a coherent state."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -58,7 +67,7 @@
     "Free Hamiltonians of the cavity and the environment:\n",
     "$$H_{\\textnormal{cav}}=\\hbar\\omega_\\textnormal{cav}\\hat{a}^\\dag\\hat{a}$$\n",
     "$$H_{\\textnormal{env}}=\\hbar\\omega_\\textnormal{env}\\hat{b}^\\dag\\hat{b}$$\n",
-    "Taken from equation 342 of the lecture notes with monochromatic laser"
+    "Taken from equation 342 of the lecture notes changed for monochromatic laser"
    ]
   },
   {
@@ -80,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Interaction Hamiltonian from Equation 343:\n",
+    "Interaction Hamiltonian from Equation 343 of the lecture notes:\n",
     "$$H_\\textnormal{int} = i\\hbar g (\\hat{b}^\\dag\\hat{a}-\\hat{b}\\hat{a}^\\dag)$$"
    ]
   },
@@ -109,7 +118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Output vector potential from Equation 471 of the [Shanghai Jiaotung lecture notes](https://www.carlosnb.com/_files/ugd/b99da1_fa5355be38c448aca09f1584d705c52a.pdf)\n",
+    "Output vector potential from Equation 471 of the lecture notes\n",
     "$$\\hat{A}^{(+)}_\\textnormal{out}(z)=-i\\sqrt{\\frac{\\hbar}{4\\pi c \\varepsilon_0 S \\omega_\\textnormal{cav}}}\\hat{b}e^{i\\omega_\\textnormal{env}(z-L)/c}$$"
    ]
   },
@@ -137,6 +146,13 @@
     "t = times#[-1500:]\n",
     "r0 = result0.expect[0]#[-1500:]\n",
     "r1 = result1.expect[0]#[-1500:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Output graph looks strange..."
    ]
   },
   {
