Link to lecture notes

--- a/cavity-lengths.ipynb
+++ b/cavity-lengths.ipynb
@@ -67,7 +67,7 @@
     "Free Hamiltonians of the cavity and the environment:\n",
     "$$H_{\\textnormal{cav}}=\\hbar\\omega_\\textnormal{cav}\\hat{a}^\\dag\\hat{a}$$\n",
     "$$H_{\\textnormal{env}}=\\hbar\\omega_\\textnormal{env}\\hat{b}^\\dag\\hat{b}$$\n",
-    "Taken from equation 342 of the lecture notes changed for monochromatic laser"
+    "Taken from equation 342 of the [Shanghai Jiaotung lecture notes](https://www.carlosnb.com/_files/ugd/b99da1_fa5355be38c448aca09f1584d705c52a.pdf) changed for monochromatic laser"
    ]
   },
   {
